update titulo index productos

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Productos
+                Productos1
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="formulario_crear_producto.html">Crear Producto</a>
